--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     	<link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <header>
+            <a href = "index.html"></a>
+        </header>
         <main>
             <h1>Mountain excursions</h1>
             <div class="gallery">
@@ -14,3 +17,4 @@
         </main>
     </body>
 </html>
+
