--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <header>
-            <a href = "index.html"></a>
+            <a href = "index.html">Travel</a>
         </header>
         <main>
             <h1>Mountain excursions</h1>
@@ -17,4 +17,5 @@
         </main>
     </body>
 </html>
+
 
